# holos

./: .gitignore  HOLOS_investigacion_tecnica.md  LICENSE  PUBLISHING.md  README.md
.github/workflows/: ci.yml
holos_core/: Cargo.toml
holos_core/examples/: bench.rs  clasificador.rs  digits.rs  dolar_de_mexico.rs  memoria.rs
holos_core/src/: bsc.rs  classifier.rs  encoder.rs  lib.rs  map.rs  memory.rs  rng.rs
holos_py/: Cargo.toml  README.md  pyproject.toml
holos_py/src/: lib.rs
prototipo_py/: 01_cuasi_ortogonalidad.py  02_record_y_consulta.py  03_dolar_de_mexico.py  04_clasificador.py  bench.py  bench_cleanup.py  hdc.py
